fixed stretching badge of the status commuter table

--- a/src/assets/css/CommuterTable.css
+++ b/src/assets/css/CommuterTable.css
@@ -61,7 +61,8 @@ tbody {
 } */
 
 .badgeStatusCommuter {
-    width: 100%;
+    height: 100px;
+    width: 100px;
     margin: 0 auto;
 
     border-radius: 20px;
